solve mistake on mobile screen of header  bg-img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,7 @@
     background-image: url(../images/png/header-bg-img.png);
     background-repeat: no-repeat;
     background-position: bottom;
-    background-size: 100% 100%;
+    background-size: cover;
 }
 
 .min-h-818 {
@@ -349,6 +349,10 @@
 
     .pl-45 {
         padding-left: 45px !important;
+    }
+
+    .bg-img {
+        background-size: 100% 100%;
     }
 }
 
